# SocketFalco

./: .gitignore  CMakeLists.txt  LICENSE  README.md  caching.hpp  client  client.cpp  server  server.cpp  service.cpp  service.hpp  workspace.code-workspace
caching/: caching.cpp  caching.hpp
include/: caching.hpp  client.hpp  connection.hpp  server.hpp  service.hpp
message/: message.hpp
service/: service.cpp  service.hpp
src/: caching.cpp  connection.cpp  service.cpp  socket_falco.cpp  socket_realtime_cached_chat.cpp
